<resources>
    <string name="app_name">FileWire</string>
    <string name="initializing">Initializing…</string>
    <string name="receive">Receive</string>
    <string name="send">Send</string>
    <string name="tab_text_1">Photos</string>
    <string name="tab_text_2">Video</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_3">Apps</string>
    <string name="tab_text_4">Gallery</string>
    <string name="tab_text_5">File</string>
    <string name="select_files">File Selection</string>
    <string name="please_scan_the_following_qr_code_on_the_sender_device">Please scan the following QR code on the sender device</string>
    <string name="selected">Selected</string>
    <string name="transfer_in_progress">Transferring Files</string>
    <string name="loading_file_information">Loading File Information</string>
    <string name="open">Open</string>
    <string name="cancelled">Cancelled</string>
    <string name="inProgressTitile">Transfer in Progress</string>
    <string name="select_files1">Select Files</string>
    <string name="complete">Transfer Complete</string>
    <string name="success">Success</string>
    <string name="please_wait">Please Wait!</string>
    <string name="album_selection">Album Selection</string>
    <string name="information">Information</string>
    <string name="back">Back</string>
    <string name="select_current_album">Select Current Album</string>
    <string name="connect_to_pc">Connect To PC</string>
    <string name="wi_fi_status">Wi-Fi Status</string>
    <string name="wait">Please Wait!</string>
    <string name="start_to_be_able_to_manage_files_using_a_computer">Start to be able to manage files using a computer</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="instruction_connect_to_pc_simple">1. Connect your phone and computer to the same network\n2. Enter this address into your computer\'s file manager</string>
    <string name="connection_type">Connection Type</string>
    <string name="portable_not_secure">Portable (not secure)</string>
    <string name="password_protected">Password-Protected</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="_4_16_characters_letters_and_digits_case_sensitive">4 – 16 characters, letters and digits, case sensitive</string>
    <string name="how_to_connect">How to Connect</string>
    <string name="send_files">Send Files</string>
    <string name="share_pc">Share with PC</string>
    <string name="receive_files">Receive Files</string>
    <string name="filter">Filter</string>
    <string name="history">Received Files Location</string>
    <string name="external">External Storage</string>
    <string name="internal">Device Storage</string>
    <string name="steps_to_connect">Steps to Connect</string>
    <string name="_1_install_the_the_software_for_pc_from_a_href"><![CDATA[1. Download and Install the Software for PC from:-\n http://filewire.sugarsnooper.com\n\n2. Connect the PC and Mobile Device to the same network.\n\n3. Open the software on PC and click Start.\n\n4. Scan the QR Code]]></string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="ftp_server">FTP Server</string>
    <string name="select_files2">Select Files</string>
    <string name="nothing_here">Nothing Here</string>
    <string name="select_all">Select All</string>
    <string name="send_more">Select Files to Send</string>
    <string name="no_files_received_yet">No Files Received Yet</string>

    <string name="please_enter_your_name_and_select_your_avatar">Please Enter your Name and Select your Avatar :-</string>
    <string name="tap_to_edit">Tap to Edit</string>
    <string name="select_your_avatar">Select your Avatar</string>
    <string name="done">Done</string>
    <string name="name">Your Name Here</string>
    <string name="enter_credentials_manually">Connect Manually</string>
    <string name="scan_qr_code_instead">Scan QR Code Instead</string>
    <string name="please_enable_wifi">Please Enable WiFi</string>
    <string name="please_select_your_preferred_method_of_connection">Please Select your Preferred method of Connection</string>
    <string name="scanning_for_nearby_networks">Scanning for Nearby Networks</string>
    <string name="enter_password2">Enter Password</string>
    <string name="ssid">SSID</string>
    <string name="switch_to_5ghz">Switch to 5GHz</string>
    <string name="open_hotspot_settings">Open Hotspot Settings</string>
    <string name="hotspot_already_turned_on">HotSpot already turned on by User</string>
    <string name="find_nearby_pcs">Find Nearby PCs</string>
    <string name="or_n_n3_open_the_software_on_pc_and_try_searching_for_pc_after_clicking_start_on_pc"><b>Or</b>\n4. Try searching for PC</string>
    <string name="scanning_for_nearby_pcs">Searching for Nearby PCs</string>
    <string name="could_not_find_pcs">Could not find any PCs. Retry?</string>
    <string name="clear">Clear</string>
    <string name="selected_files">Selected Files</string>
    <string name="pair_pc">Pair PC</string>
    <string name="paired_pcs">Paired PCs</string>
    <string name="please_provide_permission_to_access_all_the_files_on_the_device_to_search_for_something">Please
        provide permission to access all the files on the device to search for something
    </string>
    <string name="allow">Allow</string>
    <string name="files_are_being_refreshed_nplease_wait_it_may_take_some_time">Files are being refreshed\nPlease Wait.
        It may take some time
    </string>
    <string name="please_provide_permission_to_access_all_the_files_on_the_device_to_use_this_feature">Please provide
        permission to Access All The Files on the device to use this feature.
    </string>
    <string name="use_material_you">Use Material You</string>
    <string name="use_material">Use Material Theme</string>
    <string name="send_to_pc">Send To PC</string>

    <string name="fastscroll__app_name">RecyclerViewFastScroll</string>
    <string name="no_app_to_handle">No app to open the file</string>
</resources>
