<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="?android:colorBackground"
    android:gravity="center"
    android:orientation="vertical"
    app:cardCornerRadius="10dp"
    android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >
        <TextView
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textAlignment="gravity"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/connection_type"/>
        <RadioGroup

            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/open_security_selection_pc_transfer_radio"
                android:buttonTint="@color/button_color"
                android:padding="10dp"
                android:text="@string/portable_not_secure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/closed_security_selection_pc_transfer_radio"
                android:buttonTint="@color/button_color"
                android:padding="10dp"
                android:text="@string/password_protected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RadioGroup>
        <EditText
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:id="@+id/pc_share_security_username"
            android:textCursorDrawable="@null"
            android:inputType="textEmailAddress"
            android:background="#22888888"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"/>
        <EditText
            android:layout_marginTop="5dp"
            android:id="@+id/pc_share_security_password"
            android:textCursorDrawable="@null"
            android:background="#22888888"
            android:inputType="textPassword"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"/>
        <TextView
            android:id="@+id/pc_share_security_password_and_username_info"
            android:background="@color/zxing_transparent"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_4_16_characters_letters_and_digits_case_sensitive"/>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/button_cancel_pc_connection"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#00ffffff"
                android:textColor="?android:attr/textColorPrimary"
                android:text="@string/cancel"
                android:textAllCaps="false"
                />
            <Button
                android:id="@+id/button_connect_pc_connection"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#00ffffff"
                android:textColor="@color/colorAccent"
                android:textAllCaps="true"
                android:text="@string/ok"
                />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>