<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.core.widget.NestedScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    android:gravity="center_horizontal|center_vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="30dp">
    <TextView
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:typeface="monospace"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/steps_to_connect"
        />
    <TextView

        android:autoLink="web"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:typeface="monospace"
        android:textSize="16sp"
        android:textAlignment="center"
        android:text="@string/_1_install_the_the_software_for_pc_from_a_href"
        />
<!--    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:gravity="center_horizontal|center_vertical"-->
<!--        android:textAlignment="gravity"-->
<!--        android:layout_margin="10dp"-->
<!--        android:backgroundTint="@color/button_color"-->
<!--        android:text="@string/scan_qr_code" />-->

    <androidx.cardview.widget.CardView
        android:focusable="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:id="@+id/scan_qr_code_pc_connection_software_button"
        app:cardCornerRadius="@dimen/card_corner_radius_main_page"
        app:cardBackgroundColor="#22888888"
        app:cardElevation="0dp"
        android:layout_marginBottom="@dimen/margin_cards"
        android:layout_width="130dp"
        android:layout_height="175dp">
        <LinearLayout
            android:padding="15dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_weight="1"
                android:background="#00000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_qr_code"
                android:scaleType="fitXY"
                />
            <TextView
                android:typeface="monospace"
                android:paddingTop="10dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textSize="16sp"
                android:text="@string/scan_qr_code"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:typeface="monospace"
        android:textSize="16sp"
        android:textAlignment="center"
        android:text="@string/or_n_n3_open_the_software_on_pc_and_try_searching_for_pc_after_clicking_start_on_pc"
        />

    <androidx.cardview.widget.CardView
        android:focusable="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:id="@+id/find_nearby_pc_button"
        app:cardCornerRadius="@dimen/card_corner_radius_main_page"
        app:cardBackgroundColor="#22888888"
        app:cardElevation="0dp"
        android:layout_marginBottom="@dimen/margin_cards"
        android:layout_width="130dp"
        android:layout_height="175dp">
        <LinearLayout
            android:padding="15dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_weight="1"
                android:background="#00000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_radar"
                android:scaleType="fitXY"
                />
            <TextView
                android:typeface="monospace"
                android:paddingTop="10dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textSize="16sp"
                android:text="@string/find_nearby_pcs"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>