<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|center"
    android:orientation="vertical">



    <androidx.cardview.widget.CardView

        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/name_avtar_entry_card"
        app:cardBackgroundColor="?android:colorBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">
        <eightbitlab.com.blurview.BlurView
            android:id="@+id/blur_behind_avtar_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textColor="?android:textColorPrimary"
                android:padding="20dp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_enter_your_name_and_select_your_avatar"
                android:gravity="center_horizontal" />

            <LinearLayout
                android:layout_margin="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_margin="3dp"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/avtar_selector_image"
                    android:src="@drawable/ic_av1"/>
                <TextView
                    android:textColor="?android:textColorSecondary"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/tap_to_edit"/>

            </LinearLayout>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="15dp"

                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="20dp"
                app:cardElevation="0dp"
                android:backgroundTint="#22888888"
                >


                <EditText

                    android:id="@+id/name_box_firstpage"
                    android:textCursorDrawable="@null"
                    android:inputType="textPersonName"
                    android:background="#00000000"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"/>

            </androidx.cardview.widget.CardView>

            <Button
                android:textColor="#88000000"
                android:id="@+id/save_name_avatar_button"
                android:layout_marginTop="20dp"
                android:background="#0099DD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/done"/>
        </LinearLayout>
        </eightbitlab.com.blurview.BlurView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/avtar_selector_card"
        app:cardBackgroundColor="?android:colorBackground"
        app:cardElevation="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">

        <eightbitlab.com.blurview.BlurView
            android:id="@+id/blur_behind_avtar_select_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/select_your_avatar"
                android:textAlignment="center"
                android:textColor="?android:textColorPrimary"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/avtar_selection_recycler_view"/>

            <Button
                android:id="@+id/avatar_selection_confirm_button"
                android:layout_marginTop="20dp"
                android:background="#0099DD"
                android:textColor="#88000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/done"/>
        </LinearLayout>
        </eightbitlab.com.blurview.BlurView>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>